Fix header from overflowing when height of window is resized

--- a/reset.css
+++ b/reset.css
@@ -14,7 +14,7 @@
 
 html, body {
     max-width: 1920px;
-    height: 100%;
+    min-height: 100%;
 }
 
 body {
